-
Bug
-
Resolution: Fixed
-
Blocker
-
Lustre 2.4.0
-
3
-
8102
While working on LU-2015, I ran
[root@fat-amd-4 ~]# lctl --device 38 create 10
create: 10 objects
create: #1 is object id 0x17
create: #2 is object id 0x18
create: #3 is object id 0x19
create: #4 is object id 0x1a
create: #5 is object id 0x1b
create: #6 is object id 0x1c
create: #7 is object id 0x1d
create: #8 is object id 0x1e
create: #9 is object id 0x1f
create: #10 is object id 0x20
[root@fat-amd-4 ~]# lctl --device 38 destroy 23 10
destroy: 10 objects
error: destroy: objid 0x17: No such file or directory
[root@fat-amd-4 ~]# lctl --device 38 getattr 23
and system crashed
[root@fat-amd-4 ~]# lctl dl
0 UP osd-ldiskfs lustre-MDT0000-osd lustre-MDT0000-osd_UUID 15
1 UP mgs MGS MGS 9
2 UP mgc MGC10.10.4.135@tcp 1c15e092-286e-8a83-aab0-60675730ed2f 5
3 UP mds MDS MDS_uuid 3
4 UP lod lustre-MDT0000-mdtlov lustre-MDT0000-mdtlov_UUID 4
5 UP mdt lustre-MDT0000 lustre-MDT0000_UUID 23
6 UP mdd lustre-MDD0000 lustre-MDD0000_UUID 4
7 UP qmt lustre-QMT0000 lustre-QMT0000_UUID 4
8 UP lwp lustre-MDT0000-lwp-MDT0000 lustre-MDT0000-lwp-MDT0000_UUID 5
9 UP osd-ldiskfs lustre-OST0000-osd lustre-OST0000-osd_UUID 5
10 UP ost OSS OSS_uuid 3
11 UP obdfilter lustre-OST0000 lustre-OST0000_UUID 10
12 UP lwp lustre-MDT0000-lwp-OST0000 lustre-MDT0000-lwp-OST0000_UUID 5
13 UP osd-ldiskfs lustre-OST0001-osd lustre-OST0001-osd_UUID 5
14 UP obdfilter lustre-OST0001 lustre-OST0001_UUID 10
15 UP lwp lustre-MDT0000-lwp-OST0001 lustre-MDT0000-lwp-OST0001_UUID 5
16 UP osd-ldiskfs lustre-OST0002-osd lustre-OST0002-osd_UUID 5
17 UP obdfilter lustre-OST0002 lustre-OST0002_UUID 10
18 UP lwp lustre-MDT0000-lwp-OST0002 lustre-MDT0000-lwp-OST0002_UUID 5
19 UP osd-ldiskfs lustre-OST0003-osd lustre-OST0003-osd_UUID 5
20 UP obdfilter lustre-OST0003 lustre-OST0003_UUID 10
21 UP lwp lustre-MDT0000-lwp-OST0003 lustre-MDT0000-lwp-OST0003_UUID 5
22 UP osp lustre-OST0000-osc-MDT0000 lustre-MDT0000-mdtlov_UUID 5
23 UP osp lustre-OST0001-osc-MDT0000 lustre-MDT0000-mdtlov_UUID 5
24 UP osp lustre-OST0002-osc-MDT0000 lustre-MDT0000-mdtlov_UUID 5
25 UP osp lustre-OST0003-osc-MDT0000 lustre-MDT0000-mdtlov_UUID 5
26 UP osd-ldiskfs lustre-OST0004-osd lustre-OST0004-osd_UUID 5
27 UP obdfilter lustre-OST0004 lustre-OST0004_UUID 10
28 UP lwp lustre-MDT0000-lwp-OST0004 lustre-MDT0000-lwp-OST0004_UUID 5
29 UP osd-ldiskfs lustre-OST0005-osd lustre-OST0005-osd_UUID 5
30 UP obdfilter lustre-OST0005 lustre-OST0005_UUID 10
31 UP lwp lustre-MDT0000-lwp-OST0005 lustre-MDT0000-lwp-OST0005_UUID 5
32 UP osd-ldiskfs lustre-OST0006-osd lustre-OST0006-osd_UUID 5
33 UP obdfilter lustre-OST0006 lustre-OST0006_UUID 10
34 UP lwp lustre-MDT0000-lwp-OST0006 lustre-MDT0000-lwp-OST0006_UUID 5
35 UP osp lustre-OST0004-osc-MDT0000 lustre-MDT0000-mdtlov_UUID 5
36 UP osp lustre-OST0005-osc-MDT0000 lustre-MDT0000-mdtlov_UUID 5
37 UP osp lustre-OST0006-osc-MDT0000 lustre-MDT0000-mdtlov_UUID 5
38 UP echo_client lustre-OST0000_ecc lustre-OST0000_ecc_UUID 3
39 UP echo_client lustre-OST0001_ecc lustre-OST0001_ecc_UUID 3
40 UP echo_client lustre-OST0002_ecc lustre-OST0002_ecc_UUID 3
41 UP echo_client lustre-OST0003_ecc lustre-OST0003_ecc_UUID 3
42 UP echo_client lustre-OST0004_ecc lustre-OST0004_ecc_UUID 3
43 UP echo_client lustre-OST0005_ecc lustre-OST0005_ecc_UUID 3
44 UP echo_client lustre-OST0006_ecc lustre-OST0006_ecc_UUID 3
LustreError: 8630:0:(echo_client.c:1089:cl_echo_object_find()) ASSERTION( ostid_seq(&lsm->lsm_wire.lw_object_oi) == FID_SEQ_ECHO ) failed: ^M
LustreError: 8630:0:(echo_client.c:1089:cl_echo_object_find()) LBUG^M
Pid: 8630, comm: lctl^M
^M
Call Trace:^M
[<ffffffffa0417895>] libcfs_debug_dumpstack+0x55/0x80 [libcfs]^M
[<ffffffffa0417e97>] lbug_with_loc+0x47/0xb0 [libcfs]^M
[<ffffffffa0f311fe>] cl_echo_object_find+0xae/0x740 [obdecho]^M
[<ffffffffa0f34f13>] echo_get_object+0xd3/0x320 [obdecho]^M
[<ffffffffa0f388e6>] echo_client_iocontrol+0x506/0x3bd0 [obdecho]^M
[<ffffffff8113b489>] ? zone_statistics+0x99/0xc0^M
[<ffffffff81096ce0>] ? wake_bit_function+0x0/0x50^M
[<ffffffff8119b08a>] ? dput+0x9a/0x150^M
[<ffffffff8132f6ca>] ? misc_open+0x1ca/0x320^M
[<ffffffff811847f1>] ? cdev_get+0x31/0xe0^M
[<ffffffffa051dd6a>] ? obd_ioctl_getdata+0x13a/0x1130 [obdclass]^M
[<ffffffffa053544f>] class_handle_ioctl+0x12bf/0x1e80 [obdclass]^M
[<ffffffff8117e514>] ? nameidata_to_filp+0x54/0x70^M
[<ffffffffa051d2ab>] obd_class_ioctl+0x4b/0x190 [obdclass]^M
[<ffffffff81195012>] vfs_ioctl+0x22/0xa0^M
[<ffffffff811951b4>] do_vfs_ioctl+0x84/0x580^M
[<ffffffff81195731>] sys_ioctl+0x81/0xa0^M
[<ffffffff810dc645>] ? __audit_syscall_exit+0x265/0x290^M
[<ffffffff8100b072>] system_call_fastpath+0x16/0x1b^M
^M
Kernel panic - not syncing: LBUG^M
Pid: 8630, comm: lctl Not tainted 2.6.32-358.2.1.el6_lustre.g53d4286.x86_64 #1^M
Call Trace:^M
[<ffffffff8150d648>] ? panic+0xa7/0x16f^M
[<ffffffffa0417eeb>] ? lbug_with_loc+0x9b/0xb0 [libcfs]^M
[<ffffffffa0f311fe>] ? cl_echo_object_find+0xae/0x740 [obdecho]^M
[<ffffffffa0f34f13>] ? echo_get_object+0xd3/0x320 [obdecho]M@
[<ffffffffa0f388e6>] ? echo_client_iocontrol+0x506/0x3bd0 [obdecho]^M
[<ffffffff8113b489>] ? zone_statistics+0x99/0xc0^M
[<ffffffff81096ce0>] ? wake_bit_function+0x0/0x50^M
[<ffffffff8119b08a>] ? dput+0x9a/0x150^M
[<ffffffff8132f6ca>] ? misc_open+0x1ca/0x320^M
[<ffffffff811847f1>] ? cdev_get+0x31/0xe0^M
[<ffffffffa051dd6a>] ? obd_ioctl_getdata+0x13a/0x1130 [obdclass]^M
[<ffffffffa053544f>] ? class_handle_ioctl+0x12bf/0x1e80 [obdclass]^M
[<ffffffff8117e514>] ? nameidata_to_filp+0x54/0x70^M
[<ffffffffa051d2ab>] ? obd_class_ioctl+0x4b/0x190 [obdclass]^M
[<ffffffff81195012>] ? vfs_ioctl+0x22/0xa0^M
[<ffffffff811951b4>] ? do_vfs_ioctl+0x84/0x580^M
[<ffffffff81195731>] ? sys_ioctl+0x81/0xa0^M
[<ffffffff810dc645>] ? __audit_syscall_exit+0x265/0x290^M
[<ffffffff8100b072>] ? system_call_fastpath+0x16/0x1b^M
Initializing cgroup subsys cpuset^M
Initializing cgroup subsys cpu^M
- is related to
-
LU-2888 After downgrade from 2.4 to 2.1.4, hit (osd_handler.c:2343:osd_index_try()) ASSERTION( dt_object_exists(dt) ) failed
-
- Resolved
-