lustre/tests/sanity.sh
@@ -8785,7 +8785,7 @@ cleanup_obdecho_osc () {
         return 0
 }
 
-obdecho_create_test() {
+obdecho_test() {
         local OBD=$1
         local node=$2
         local pages=${3:-64}
@@ -8800,40 +8800,42 @@ obdecho_create_test() {
             [ ${PIPESTATUS[0]} -eq 0 -a -n "$id" ] || rc=3
         fi
         echo "New object id is $id"
+	[ $rc -eq 0 ] && { do_facet $node "$LCTL --device ec getattr $id" ||
+		rc=4; }
 	[ $rc -eq 0 ] && { do_facet $node "$LCTL --device ec "		       \
-			   "test_brw $count w v $pages $id" || rc=4; }
-	[ $rc -eq 0 -o $rc -gt 3 ] && { do_facet $node "$LCTL --device ec "    \
-                                        "destroy $id 1" || rc=5; }
-        [ $rc -eq 0 -o $rc -gt 2 ] && { do_facet $node "$LCTL --device ec "    \
-                                        "cleanup" || rc=6; }
-        [ $rc -eq 0 -o $rc -gt 1 ] && { do_facet $node "$LCTL --device ec "    \
-                                        "detach" || rc=7; }
-        [ $rc -ne 0 ] && echo "obecho_create_test failed: $rc"
-        return $rc
+		"test_brw $count w v $pages $id" || rc=4; }
+	[ $rc -eq 0 ] && { do_facet $node "$LCTL --device ec "    \
+		"destroy $id 1" || rc=5; }
+	[ $rc -eq 0 -o $rc -gt 2 ] && { do_facet $node "$LCTL --device ec "    \
+		"cleanup" || rc=6; }
+	[ $rc -eq 0 -o $rc -gt 1 ] && { do_facet $node "$LCTL --device ec "    \
+		"detach" || rc=7; }
+	[ $rc -ne 0 ] && echo "obecho_create_test failed: $rc"
+	return $rc
 }
 
 test_180a() {
-        remote_ost_nodsh && skip "remote OST with nodsh" && return
-        local rc=0
-        local rmmod_local=0
+	remote_ost_nodsh && skip "remote OST with nodsh" && return
+	local rc=0
+	local rmmod_local=0
 
-        if ! module_loaded obdecho; then
-            load_module obdecho/obdecho
-            rmmod_local=1
-        fi
+	if ! module_loaded obdecho; then
+	    load_module obdecho/obdecho
+	    rmmod_local=1
+	fi
 
-        local osc=$($LCTL dl | grep -v mdt | awk '$3 == "osc" {print $4; exit}')
-        local host=$(lctl get_param -n osc.$osc.import |
-                             awk '/current_connection:/ {print $2}' )
-        local target=$(lctl get_param -n osc.$osc.import |
-                             awk '/target:/ {print $2}' )
-        target=${target%_UUID}
+	local osc=$($LCTL dl | grep -v mdt | awk '$3 == "osc" {print $4; exit}')
+	local host=$(lctl get_param -n osc.$osc.import |
+			     awk '/current_connection:/ {print $2}' )
+	local target=$(lctl get_param -n osc.$osc.import |
+			     awk '/target:/ {print $2}' )
+	target=${target%_UUID}
 
-        [[ -n $target ]]  && { setup_obdecho_osc $host $target || rc=1; } || rc=1
-        [ $rc -eq 0 ] && { obdecho_create_test ${target}_osc client || rc=2; }
-        [[ -n $target ]] && cleanup_obdecho_osc $target
-        [ $rmmod_local -eq 1 ] && rmmod obdecho
-        return $rc
+	[[ -n $target ]]  && { setup_obdecho_osc $host $target || rc=1; } || rc=1
+	[ $rc -eq 0 ] && { obdecho_test ${target}_osc client || rc=2; }
+	[[ -n $target ]] && cleanup_obdecho_osc $target
+	[ $rmmod_local -eq 1 ] && rmmod obdecho
+	return $rc
 }
 run_test 180a "test obdecho on osc"
 
@@ -8850,8 +8852,8 @@ test_180b() {
 	if [ -n $target ]; then
 #define OBD_FAIL_OBD_ZOMBIE_SLEEP	0x607
 		do_facet ost1 $LCTL set_param fail_loc=0x80000607
-		obdecho_create_test $target ost1 || rc=1
-		obdecho_create_test $target ost1 || rc=1
+		obdecho_test $target ost1 || rc=1
+		obdecho_test $target ost1 || rc=1
 		do_facet ost1 $LCTL set_param fail_loc=0
 	fi
 	[ $rmmod_remote -eq 1 ] && do_facet ost1 "rmmod obdecho"
@@ -8871,7 +8873,7 @@ test_180c() { # LU-2598
 
 	target=$(do_facet ost1 $LCTL dl | awk '/obdfilter/ {print $4}'|head -1)
 	if [[ -n $target ]]; then
-		obdecho_create_test "$target" ost1 "$pages" 1 ||
+		obdecho_test "$target" ost1 "$pages" 1 ||
 			rc=${PIPESTATUS[0]}
 	else
 		echo "there is no obdfilter target on ost1"
@@ -9660,6 +9662,11 @@ test_225a () {
 	      skip_env "mds-survey not found" && return
 	fi
 
+       if ! module_loaded obdecho; then
+           load_module obdecho/obdecho
+           rmmod_local=1
+       fi
+
        local mds=$(facet_host $SINGLEMDS)
        local target=$(do_nodes $mds 'lctl dl' | \
                       awk "{if (\$2 == \"UP\" && \$3 == \"mdt\") {print \$4}}")
@@ -9674,6 +9681,8 @@ test_225a () {
        eval $cmd || error "mds-survey with zero-stripe failed"
        cat ${TMP}/mds_survey*
        rm -f ${TMP}/mds_survey*
+
+       [ $rmmod_local -eq 1 ] && rmmod obdecho
 }
 run_test 225a "Metadata survey sanity with zero-stripe"
 
@@ -9681,8 +9690,11 @@ test_225b () {
 	if [ -z ${MDSSURVEY} ]; then
 	      skip_env "mds-survey not found" && return
 	fi
-	[ $(lustre_version_code $SINGLEMDS) -ge $(version_code 2.2.51) ] ||
-	    { skip "Need MDS version at least 2.2.51"; return; }
+
+	if ! module_loaded obdecho; then
+		load_module obdecho/obdecho
+		rmmod_local=1
+	fi
 
 	if [ $($LCTL dl | grep -c osc) -eq 0 ]; then
 	      skip_env "Need to mount OST to test" && return
@@ -9704,6 +9716,8 @@ test_225b () {
        eval $cmd || error "mds-survey with stripe_count failed"
        cat ${TMP}/mds_survey*
        rm -f ${TMP}/mds_survey*
+
+       [ $rmmod_local -eq 1 ] && rmmod obdecho
 }
 run_test 225b "Metadata survey sanity with stripe_count = 1"
 
